# ecc

./: Cargo.toml  LICENSE-APACHE  README.md  _typos.toml  cog.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-new-ecc.yml
.github/workflows/: CI.yml  ci.yml  commit-message.yml  rust-ci.yml  spelling.yml
crates/: Cargo.toml
crates/ecc/: Cargo.toml
crates/ecc-cli/: Cargo.toml
crates/ecc-cli/src/: check.rs  ecc.rs  main.rs  ontology.rs
crates/ecc-cli/src/ecc/: check.rs
crates/ecc-cli/src/ontology/init/: directory.rs
crates/ecc/src/: common.rs  field.rs  lib.rs  rfc.rs  status.rs  text.rs
crates/ecc/src/common/: optional.rs  reference.rs  value.rs
crates/ecc/src/common/value/: kind.rs
crates/ecc/src/common/value/kind/: binary.rs  numerical.rs
crates/ecc/src/text/: sentence.rs
crates/ecc/tests/: simple.rs
crates/ecc/tests/fixtures/: simple.yml
crates/ontology/src/node/: builder.rs  name.rs
crates/test-infra/: Cargo.toml
crates/test-infra/src/: lib.rs
ecc/: 000000-example.yml
ecc/molec/: ECC-MOLEC-000001.yml
ecc/morph/: ECC-MORPH-000001.yml
ecc/morph/drafts/: vascular_proliferation.yml
src/ecc/: Cargo.toml
src/ecc/src/: identifier.rs  lib.rs
src/ecc/tests/: common.rs  simple.rs
src/ecc/tests/fixtures/: simple.yml
src/ontology/: Cargo.toml
src/ontology/src/: lib.rs  node.rs
src/ontology/src/node/: builder.rs  name.rs
src/ontology/tests/: simple.rs
src/ontology/tests/fixtures/: simple.yml
