[workspace]
members = ["ecc", "ecc-cli", "ontology", "test-infra"]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"
authors = ["The St. Jude Cloud developers <support@stjude.cloud>"]
homepage = "https://github.com/stjudecloud/ecc"
repository = "https://github.com/stjudecloud/ecc"
rust-version = "1.82.0"

[workspace.dependencies]
anyhow = "1.0.93"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.21", features = ["derive"] }
colored = "3.0.0"
convert_case = "0.6.0"
csv = "1.3.1"
glob = "0.3.1"
petgraph = "0.6.5"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_with = "3.11.0"
serde_yaml = "0.9"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = { version = "2.5.3", features = ["serde"] }

[workspace.lints.rust]
missing_docs = "warn"
nonstandard-style = "warn"
rust-2018-idioms = "warn"
rust-2021-compatibility = "warn"
rust-2024-compatibility = "warn"
edition_2024_expr_fragment_specifier = "allow"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"

[workspace.lints.clippy]
missing_docs_in_private_items = "warn"
