[package]
name = "ecc-cli"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ecc = { path = "../ecc" }
ontology = { path = "../ontology" }

anyhow.workspace = true
clap.workspace = true
codespan-reporting = "0.11.1"
colored.workspace = true
convert_case.workspace = true
csv.workspace = true
glob.workspace = true
petgraph.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
