[package]
name = "ecc"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
nonempty.workspace = true
regex.workspace = true
serde.workspace = true
serde_with.workspace = true
url.workspace = true

[dev-dependencies]
test-infra = { path = "../test-infra" }

anyhow.workspace = true
glob.workspace = true
serde_yaml.workspace = true

[lints]
workspace = true
