[package]
name = "test-infra"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
glob.workspace = true
serde.workspace = true
serde_yaml.workspace = true

[lints]
workspace = true
