[package]
name = "ontology"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_with.workspace = true

[dev-dependencies]
test-infra = { path = "../test-infra" }

chrono.workspace = true

[lints]
workspace = true
